@@ -425,14 +425,16 @@ def calculate_graphsize(args, graphtype, multiplier=1.0):
 def create_nodegraph(args, ksize=None, multiplier=1.0, fp_rate=0.01):
     """Create and return a nodegraph."""
     args = _check_fp_rate(args, fp_rate)
-    
+
     if hasattr(args, 'force'):
         if args.n_tables > 20:
             if not args.force:
-                print_error("\n** ERROR: khmer only supports number of tables <= 20.\n")
+                print_error(
+                    "\n** ERROR: khmer only supports number of tables <= 20.\n")
                 sys.exit(1)
             else:
-                log_warn("\n*** Warning: Maximum recommended number of tables is 20, discarded by force nonetheless!\n")
+                log_warn("\n*** Warning: Maximum recommended number of "
+                         "tables is 20, discarded by force nonetheless!\n")
 
     if ksize is None:
         ksize = args.ksize
@@ -447,15 +449,17 @@ def create_nodegraph(args, ksize=None, multiplier=1.0, fp_rate=0.01):
 def create_countgraph(args, ksize=None, multiplier=1.0, fp_rate=0.1):
     """Create and return a countgraph."""
     args = _check_fp_rate(args, fp_rate)
-    
+
     if hasattr(args, 'force'):
         if args.n_tables > 20:
             if not args.force:
-                print_error("\n** ERROR: khmer only supports number of tables <= 20.\n")
+                print_error(
+                    "\n** ERROR: khmer only supports number of tables <= 20.\n")
                 sys.exit(1)
             else:
                 if args.n_tables > 20:
-                    log_warn("\n*** Warning: Maximum recommended number of tables is 20, discarded by force nonetheless!\n")
+                    log_warn("\n*** Warning: Maximum recommended number of "
+                             "tables is 20, discarded by force nonetheless!\n")
 
     if ksize is None:
         ksize = args.ksize
